<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="1">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/event_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:drawable="?android:attr/fastScrollTextColor"
        android:orientation="vertical"
        android:layout_weight="1.14"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_title" />

            <EditText
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:autofillHints="Edit Title"
                android:ems="10"
                android:hint="@string/event_title"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_home" />

            <EditText
                android:id="@+id/event_owner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/event_desc"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_home" />

            <EditText
                android:id="@+id/event_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/Briefly"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_event_desc" />

            <EditText
                android:id="@+id/event_start_date"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:layout_weight="0.09"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/event_start_date"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/event_start_time"
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/event_start_time"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/circle" />

            <EditText
                android:id="@+id/event_end_date"
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/event_end_date"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/event_end_time"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/event_end_time"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_place" />

            <EditText
                android:id="@+id/event_country"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/event_country"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/circle" />

            <EditText
                android:id="@+id/event_address"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="0.82"
                android:ems="10"
                android:hint="@string/event_address"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_weight="0.13"
                app:srcCompat="@drawable/ic_type" />
            <ImageView
                android:id="@+id/img_cat_reg"
                android:layout_width="50dp"
                android:layout_height="51dp"

                android:background="@drawable/ic_choose_category"
                android:layout_toRightOf="@+id/etxt_category"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp" />

            <TextView
                android:id="@+id/event_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.11"
                android:ems="10"
                android:enabled="false"

                android:inputType="textPersonName"
                android:textColor="@color/cast_expanded_controller_text_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal"
            android:layout_weight="0.47">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_weight="0.33"
                app:srcCompat="@drawable/ic_tickets" />

            <EditText
                android:id="@+id/event_seats"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_weight="0.33"
                android:ems="10"
                android:hint="@string/event_seats"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
