<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:textColor="@color/colorPrimaryDark"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">


        <ImageView
            android:id="@+id/img_reg"
            android:layout_width="72dp"
            android:layout_height="74dp"
            android:layout_gravity="right"
            android:background="@drawable/icon_register_now" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etxt_reg_name"
            android:inputType="textPersonName" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"></android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etxt_reg_email"
            android:inputType="textEmailAddress" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etxt_reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etxt_reg_pass"
            android:inputType="textPassword" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

        </android.support.design.widget.TextInputLayout>
        <RadioGroup

            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"


            android:layout_gravity="center_vertical"
            android:orientation="vertical">


        </RadioGroup>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left">
            <TextView
                android:id="@+id/etxt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/etxt_category"
                android:inputType="text"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"/>
            <ImageView
                android:id="@+id/img_cat_reg"
                android:layout_width="50dp"
                android:layout_height="51dp"

                android:background="@drawable/ic_choose_category"
                android:layout_toRightOf="@+id/etxt_category"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_reg"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/oval_button"
            android:padding="12dp"
            android:text="@string/btn_reg"
            android:textSize="18dp" />



    </LinearLayout>
</ScrollView>