<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="1">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:title="@string/my_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <com.example.TitanicTextView
                android:id="@+id/my_text_view"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_gravity="center"
                android:background="@color/cardview_light_background"
                android:gravity="center"
                android:padding="3dp"
                android:paddingBottom="6dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:shadowColor="?android:attr/colorForeground"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/loading"
                android:textColor="@color/cardview_shadow_start_color"
                android:textSize="55sp" />

            <ImageView
                android:id="@+id/event_photo"
                android:layout_width="match_parent"
                android:layout_height="362dp"
                android:background="@color/cardview_light_background"
                />

            <Button
                android:id="@+id/upload_event_img"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@color/cardview_light_background"
                android:text="@string/upload_event_img"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sub_action_button_size" />


        </LinearLayout>

    </android.support.design.widget.AppBarLayout>







</LinearLayout>
