<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewShortDes"
                android:layout_marginLeft="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:textColorLink="@android:color/black"
                android:textSize="@dimen/sub_action_button_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/passed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:layout_marginEnd="13dp"
                android:layout_alignTop="@+id/show"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/textViewShortDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textViewShortDes"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/show" />

            <TextView
                android:id="@+id/textdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textdate"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_above="@+id/textViewShortDes"
                android:layout_alignStart="@+id/textViewShortDes" />

            <Button
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/imageView"
                android:background="?attr/colorButtonNormal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/MYTicket"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold"
                android:layout_below="@+id/imageView" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>